update Add Student

--- a/CAPSTONE_TEAM01_2024/Views/Categories/ClassList.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Categories/ClassList.cshtml
@@ -324,7 +324,7 @@
 				<div class="mb-3">
 					<label for="excelTemplateFile" class="form-label fw-bold"> Tải file Excel mẫu</label>
 					<div id="excelTemplateFile" style="position: relative; display: inline-block; width: 100%; height: calc(1.5em + .75rem + 2px); margin-bottom: 0px;">
-						<a class="btn btn-warning text-dark" asp-controller="Categories" asp-action="DownloadTemplate">
+						<a class="btn btn-warning text-dark" asp-controller="Categories" asp-action="DownloadClassTemplate">
 							<i class="bi bi-download"></i> Tải file mẫu
 						</a>
 					</div>
