--- a/CAPSTONE_TEAM01_2024/Views/Shared/_PrototypeLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_PrototypeLayout.cshtml
@@ -64,9 +64,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link"
-                               href="/ProfileManager/Index_ProfileManager"
-                                <i class="bi bi-person-lines-fill"></i> Quản Lý Tài Khoản
+                            <a b-gqml1abz0e="" class="nav-link bi bi-person-lines-fill" href="/ProfileManager/Index_ProfileManager"> Tài Khoản
                             </a>
                         </li>
                         <li class="nav-item">
@@ -83,22 +81,22 @@
                             <ul class="dropdown-menu show" id="dropdownMenu2" style="margin-left: 30px; display:none">
                                 <li>
                                     <a class="dropdown-item" href="/Categories/SchoolYear" style="text-decoration:none">
-                                        <i class="bi bi-calendar"></i> Danh Sách Năm Học
+                                        <i class="bi bi-calendar"></i> Năm Học
                                     </a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="/Categories/ClassList" style="text-decoration:none">
-                                        <i class="bi bi-person-badge"></i> Quản Lý Lớp Học
+                                        <i class="bi bi-person-badge"></i> Lớp Học
                                     </a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="/Categories/SemesterPlan" style="text-decoration:none">
-                                        <i class="bi bi-book"></i> Kế Hoạch Học Kỳ
+                                        <i class="bi bi-book"></i> Kế Hoạch
                                     </a>
                                 </li>
                                 <li>
                                     <a class="dropdown-item" href="/Categories/EndSemesterReport" style="text-decoration:none">
-                                        <i class="bi bi-file-earmark-text"></i> Báo Cáo Cuối Kỳ
+                                        <i class="bi bi-file-earmark-text"></i> Báo Cáo 
                                     </a>
                                 </li>
                             </ul>
